<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="59dp">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="143dp"
                android:layout_height="202dp"
                android:clickable="false"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/pict" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="143dp"
                android:layout_height="72dp"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/NMIM"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:background="#03A9F4"
                android:backgroundTint="#00BCD4"
                android:fontFamily="@font/doppio_one"
                android:text="@string/Hobi"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:fontFamily="@font/passion_one"
                android:text="@string/hobby_desc"
                android:textColor="#4C4949" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:background="#03A9F4"
                android:backgroundTint="#00BCD4"
                android:fontFamily="@font/doppio_one"
                android:text="@string/desc"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="377dp"
                android:layout_height="92dp"
                android:fontFamily="@font/passion_one"
                android:text="@string/about"
                android:textColor="#4C4949" />

            <Button
                android:id="@+id/button"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:onClick="showMap"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:text="@string/telpon"
                android:onClick="cellphone"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:onClick="email"
                android:text="@string/email" />


        </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>